Aggressively optimize startup time: remove heavy deps, tune Hibernate, disable Flyway, JVM tuning